2000-08-28  Richard Henderson  <rth@cygnus.com>

	* config/i386/i386.c: Don't error on EXTRA_CONSTRAINT defined.
	(call_insn_operand): Don't expect a surrounding mem.
	(constant_call_address_operand): Likewise.
	* config/i386/i386.h (PREDICATE_CODES): Update.
	* config/i386/i386.md (call patterns): Move the match_operand
	for the call destination inside the mem.

2000-08-28  Richard Henderson  <rth@cygnus.com>

	* local-alloc.c (requires_inout): Don't use reserved range for
	EXTRA_CONSTRAINTS; use anything not matched by REG_CLASS_FROM_LETTER.
	* recog.c (asm_operand_ok): Likewise.
	(preprocess_constraints, constrain_operands): Likewise.
	* regclass.c (record_reg_classes): Likewise.
	* reload.c (find_reloads): Likewise.
	* reload1.c (maybe_fix_stack_asms): Likewise.
	(reload_cse_simplify_operands): Likewise.
	* stmt.c (expand_asm_operands): Likewise.

	* md.texi: Update constraints documentation.
	* tm.texi (EXTRA_CONSTRAINT): Update.

2000-08-28  Jason Merrill  <jason@redhat.com>

	* dwarf2out.c (new_loc_descr): Use calloc.
	(splice_child_die): Remove the die from the right parent.
	(gen_struct_or_union_die): Don't add AT_name to a specification DIE.

Mon Aug 28 19:02:13 2000  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* toplev.c (decode_g_option): Don't give warning for unknown -g
	option; return 0 instead.
	(main): If -g option is not recognized by front end or
	language-independent code, give warning.

2000-08-28  Greg McGary  <greg@mcgary.org>

	* config/i386/i386-protos.h (ix86_expand_compare): Add extern decl.
	* config/i386/i386.c (ix86_expand_compare): Remove `static'.
	* config/i386/i386.md (trap, conditional_trap): New insn & expand.

2000-08-27  Greg McGary  <greg@mcgary.org>

	* cpplex.c (parse_string): Don't look for backslash
	before first char in `namebuf'.
	* loop.c (strength_reduce): Skip NOTEs.

2000-08-27  Jason Merrill  <jason@redhat.com>

	* c-decl.c (duplicate_decls): Don't set TREE_STATIC or clear